Add exception messages to procedure's process